<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F3F3"
    android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewHeaderxx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_background"
                android:backgroundTint="#FFB300"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/currency_converter"
                android:textColor="@color/second"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/baseline_currency_exchange_24" />

            <TextView
                android:id="@+id/editTextamtadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:text="@string/please_enter_the_amount"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal"
                android:padding="12dp" />

            <TextView
                android:id="@+id/editTextamt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:text="@string/from"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerFromCurrency"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/textViewto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:text="@string/to"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerToCurrency"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/buttonConvert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:backgroundTint="#FFB300"
                android:text="@string/convert"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/rate_1_00"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_background"
                android:gravity="center"
                android:text="@string/result_will_appear_here"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

