<!-- res/layout/qr_code_dialog.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_background"
    android:backgroundTint="#00FFFFFF"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_background"
        android:backgroundTint="#FFB300"
        android:text="@string/scan_me"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/qrCodeImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/qrdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/booking_confirmation"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnclosed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/close" />
</LinearLayout>
